[package]
name = "core_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
solana-program = "2.0.3"